--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,4 +7,6 @@ services:
     ports:
       - "5000:5000"
     environment:
-      - FLASK_ENV=development
+      FLASK_ENV: development
+    volumes:
+      - .:/app
